--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -178,7 +178,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis ar-font">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis-ar ar-font">
                                                             تصميم الاتصال المرئي</h3>
                                                     </div>
                                                 </div>
@@ -235,51 +235,56 @@
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align gdlr-core-item-mglr"
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
-                                                <h3 class="gdlr-core-block-item-title titlestyle">
-                                                    المقررات الدراسية</h3>
+                                                <h3
+                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                    المقررات الدراسية
+                                                </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-first clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ">
-                                                    <h3 class="gdlr-core-event-item-title titles-css h3-vis"><a
-                                                            href="#">Practical</a></h3>
-                                                    <p class="font-css gdlr-core-column-20">
-                                                        • Design fundamentals<br>
-                                                        • Motion graphics and effects<br>
-                                                        • Digital image processing<br>
-                                                        • Semiotics and mark making<br>
-                                                        • Semiotics and image making<br>
-                                                        • Typography 1<br>
-                                                        • Typography 2<br>
-                                                        • Portfolio design<br>
-                                                        • Industrial attachment<br>
-                                                    </p>
-                                                    <p class="font-css gdlr-core-column-20 center-grid">
-                                                        • Drawing fundamentals<br>
-                                                        • Visual identity system<br>
-                                                        • Digital illustration<br>
-                                                        • Digital photography<br>
-                                                        • Web design 1<br>
-                                                        • Publication design<br>
-                                                        • Design Studio 1<br>
-                                                        • Design Studio 2<br>
-                                                    </p>
-                                                    <p class="font-css gdlr-core-column-20-fund center-grid">
-                                                        • Type & Layout<br>
-                                                        • Visual identity system<br>
-                                                        • Digital illustration<br>
-                                                        • 3D techniques<br>
-                                                        • Advertising Design 1<br>
-                                                        • Advertising Design 2<br>
-                                                        • Packaging design<br>
-                                                        • Major project<br>
-                                                    </p>
+                                                    <h3 class="gdlr-core-event-item-title titles-css h3-vis">
+                                                        <p class="font-css gdlr-core-column-20 ar-float ar-font">
+                                                            • الرسم للمصممين<br>
+                                                            • الإبداع وحل المشكلات<br>
+                                                            • مبادئ التصميم<br>
+                                                            • الألوان للمصممين<br>
+                                                            • تاريخ التصميم والثقافة<br>
+                                                            • أساسيات الطباعة<br>
+                                                            • معالجة الصور الرقمية<br>
+                                                            • التصوير الرقمي<br>
+                                                        </p>
+                                                        <p
+                                                            class="font-css gdlr-core-column-20 center-grid ar-float ar-font">
+                                                            • أساسيات تخطيط الصفحة<br>
+                                                            • الرسم التوضيحي الرقمي والتطبيقي<br>
+                                                            • انتاج مطبوعات جرافيك<br>
+                                                            • البحث الأكاديمي ومهارات الاتصال<br>
+                                                            • تصميم نظام الهوية<br>
+                                                            • تصميم الغلاف<br>
+                                                            • تصميم الوسائط التفاعلية<br>
+                                                            • تخطيط وإنتاج متقدم<br>
+                                                            • تصميم الهوية 2<br>
+                                                        </p>
+                                                        <p
+                                                            class="font-css gdlr-core-column-20-fund center-grid ar-float ar-font">
+                                                            • طباعة متقدمة<br>
+                                                            • مبادئ تصميم الويب<br>
+                                                            • مبادئ تصميم الإعلانات<br>
+                                                            • تصميم المطبوعات<br>
+                                                            • بحث مستقل<br>
+                                                            • تصميم الهوية 1<br>
+                                                            • تصميم استوديو 1 - مشروع تصميم<br>
+                                                            • المرفق الصناعي<br>
+                                                            • تصميم استوديو 2 - مشروع تصميم<br>
+                                                        </p>
+                                                    </h3>
                                                 </div>
                                             </div>
 
@@ -311,8 +316,8 @@
                                                                             id="div_983a_26">
                                                                             <div
                                                                                 class="gdlr-core-title-item-title-wrap clearfix">
-                                                                                <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                                                    id="h3_983a_4">Theoretical</h3>
+                                                                                <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font "
+                                                                                    id="h3_983a_4">نـــظـــري</h3>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -321,14 +326,13 @@
                                                                             class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                                             <div class="gdlr-core-text-box-item-content"
                                                                                 id="div_983a_27">
-                                                                                <p class="p-about"
+                                                                                <p class="p-about ar-font ar-float"
                                                                                     style="color: rgb(0, 0, 0);"><br>•
-                                                                                    Design thinking<br><br>
-                                                                                    • History of visual
-                                                                                    communication<br><br>
-                                                                                    • Academic research and
-                                                                                    communication skills<br><br>
-                                                                                    • Print media and production
+                                                                                    التفكير في التصميم<br><br>
+                                                                                    • تاريخ الاتصال المرئي <br><br>
+                                                                                    • البحث الأكاديمي ومهارات
+                                                                                    الاتصال<br><br>
+                                                                                    • وسائل الإعلام المطبوعة والإنتاج
                                                                                 </p>
                                                                             </div>
                                                                         </div>
@@ -350,39 +354,39 @@
                                                         style="max-width: 1440px ;">
                                                         <div class="gdlr-core-pbf-element">
                                                             <h3
-                                                                class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
-                                                                Career opportunities available after completing<br>
-                                                                the Visual Communication Advanced Diploma and Bachelors
+                                                                class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-float ar-font ar-mrg">
+                                                                الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم
+                                                                أو البكالوريوس للاتصال المرئي:
                                                             </h3>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
 
-                                            <div class="grid-container-intr">
+                                            <div class="grid-container-intr ar-float">
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 1">
-                                                    <p>Creative Director</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 1">
+                                                    <p class="ar-font">مديرة تصميم</p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 2">
-                                                    <p>Illustrator</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 2">
+                                                    <p class="ar-font">مدير فني للإعلان </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 3">
-                                                    <p>Editorial Designer</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 3" dir="rtl">
+                                                    <p class="ar-font">مصممة مواد تحريرية </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 4">
-                                                    <p>Advertising Art Director</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 4">
+                                                    <p class="ar-font">مصممة هوية المؤسسات </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 5">
-                                                    <p>Packaging Designer</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 5">
+                                                    <p class="ar-font">أخصائية رسوم إيضاحية</p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Corporate Identity Designer</p>
+                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 6">
+                                                    <p class="ar-font">مصمم المصور</p>
                                                 </div>
                                             </div>
 
