--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,10 @@
                                 <li class="menu-item current-menu-item"><a href="contact.html">Contact Us</a></li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Language</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
-                                        <li class="menu-item webbox"><a href="index.html">English</a><img src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img
+                                                src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                        <li class="menu-item webbox"><a href="index.html">English</a><img
+                                                src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -290,8 +292,9 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input type="email" name="email" id="email" required
-                                    placeholder="Type your phone number">
+                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
+                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
+                                    
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
