--- a/index-ar.html
+++ b/index-ar.html
@@ -288,7 +288,7 @@
                                                                 أساسيات التصميم</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="foundation-studies.html">اقرأ
+                                                                <a class="" href="foundation-studies-ar.html">اقرأ
                                                                     المزيد</a>
                                                             </div>
                                                         </div>
@@ -322,7 +322,7 @@
                                                                 تصميم الاتصال المرئي</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="visual-communication.html">اقرأ
+                                                                <a class="" href="visual-communication-ar.html">اقرأ
                                                                     المزيد</a>
                                                             </div>
                                                         </div>
@@ -357,7 +357,7 @@
                                                                 التسويق وإدارة الأزياء</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="fashion-management-design.html">اقرأ
+                                                                <a class="" href="fashion-management-design-ar.html">اقرأ
                                                                     المزيد</a>
                                                             </div>
                                                         </div>
@@ -391,7 +391,7 @@
                                                                 التصميم الداخلي</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="interior-design.html">اقرأ المزيد</a>
+                                                                <a class="" href="interior-design-ar.html">اقرأ المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -424,7 +424,7 @@
                                                                 تصميم المجوهرات</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="jewelery-design.html">اقرأ المزيد</a>
+                                                                <a class="" href="jewelery-design-ar.html">اقرأ المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -457,7 +457,7 @@
                                                                 تصميم الأزياء</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="fashion-design.html">اقرأ المزيد</a>
+                                                                <a class="" href="fashion-design-ar.html">اقرأ المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -598,7 +598,7 @@
                                             id="div_1dd7_75">
                                             <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
                                                 id="div_1dd7_76">
-                                                <a class=" gdlr-core-js " href="img/videos/raffles3b.mp4"><img
+                                                <a class=" gdlr-core-js " href="img/videos/raffles3.mp4"><img
                                                         src="img/icon-play.png" alt="" width="82" height="82"
                                                         title="icon-play" /></a>
                                             </div>
@@ -928,8 +928,9 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input type="email" name="email" id="email" required=""
-                                    placeholder="Type your phone number">
+                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
+                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
+                                    
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
