--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -376,7 +376,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis heading1">
                                                             Visual Communication</h3>
                                                     </div>
                                                 </div>
@@ -386,7 +386,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion line3">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -401,7 +401,7 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
+                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft pdiv1">
                                                         <p>It is the field that combines design and technology, and it
                                                             is the tool which is used to
                                                             carry creative ideas from the product to the target audience
