--- a/collaboration-ar.html
+++ b/collaboration-ar.html
@@ -46,7 +46,7 @@
                                         href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
                                 </li>
                                 <li class="menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
@@ -59,7 +59,7 @@
                                 <li class="menu-item"><a href="admission-ar.html" class="text-ar1">تسجيل</a></li>
                                 <li class="menu-item"><a href="lifeinriyadh-ar.html" class="text-ar1">الحياة في
                                         الرياض</a></li>
-                                <li class="menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
+                                <li class="menu-item  current-menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
                                 <li class="menu-item"><a href="gallery-ar.html" class="text-ar1">المعرض</a></li>
                                 <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
@@ -607,8 +607,9 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input type="email" name="email" id="email" required=""
-                                    placeholder="Type your phone number">
+                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
+                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
+                                    
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
